--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/asharman/ynab-scripts#readme",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "dayjs": "^1.9.7",
     "dotenv": "^8.2.0",
     "inquirer": "^7.3.3",
     "yargs": "^16.2.0",
     "ynab": "^1.21.0"
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
